inventary items structure: dto, entity and repository